syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// BlogPost represents the core entity for a blog entry.
message BlogPost {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
  repeated string tags = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Request to create a new blog post.
message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author_id = 3;
  repeated string tags = 4;
}

// Request to retrieve a single blog post by ID.
message GetPostRequest {
  string id = 1;
}

// Request to update an existing blog post.
message UpdatePostRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  repeated string tags = 4;
}

// Request to delete a blog post.
message DeletePostRequest {
  string id = 1;
}

// Request to list blog posts with basic pagination.
message ListPostsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// Response for listing blog posts.
message ListPostsResponse {
  repeated BlogPost posts = 1;
  string next_page_token = 2;
}

// BlogService defines the CRUD operations for blog posts.
service BlogService {
  // Creates a new blog post and returns the created entry.
  rpc CreatePost(CreatePostRequest) returns (BlogPost);
  // Retrieves a blog post by its unique identifier.
  rpc GetPost(GetPostRequest) returns (BlogPost);
  // Updates an existing blog post and returns the updated entry.
  rpc UpdatePost(UpdatePostRequest) returns (BlogPost);
  // Deletes a blog post by its unique identifier.
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty);
  // Retrieves a list of blog posts with pagination support.
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}
